@@ -33,6 +33,7 @@ Version 1.4.9 - CVS
     in folder delete, rename and subscription options.
   - Translate plugin: prevent PHP notice when viewing empty message.
   - Add CEST and MEST (non-standard) timezone codes for +0200.
+  - Add <label> to From field in message list.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
